src/test/ui/type-alias-impl-trait/no_revealing_outside_defining_module.min_tait.stderr
error[E0308]: mismatched types
  --> $DIR/no_revealing_outside_defining_module.rs:18:19
   |
LL |     pub type Boo = impl ::std::fmt::Debug;
   |                    ---------------------- the found opaque type
...
LL |     let _: &str = bomp();
   |            ----   ^^^^^^ expected `&str`, found opaque type
   |            |
   |            expected due to this
   |
   = note: expected reference `&str`
            found opaque type `impl Debug`

error[E0308]: mismatched types
  --> $DIR/no_revealing_outside_defining_module.rs:22:5
   |
LL |     pub type Boo = impl ::std::fmt::Debug;
   |                    ---------------------- the expected opaque type
...
LL | fn bomp() -> boo::Boo {
   |              -------- expected `impl Debug` because of return type
LL |     ""
   |     ^^ expected opaque type, found `&str`
   |
   = note: expected opaque type `impl Debug`
                found reference `&'static str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
